Implemented Constructor